java updated to 24